--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^0.0.14",
+    "clsx": "^1.2.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "langchain": "^0.0.66",
+    "morgan": "~1.9.1",
+    "tailwind-merge": "^1.12.0"
   }
 }
