--- a/server/.env.template
+++ b/server/.env.template
@@ -1,1 +1,6 @@
-PINECONE_API_KEY="pinecone api key here"
+OPENAI_API_KEY=
+
+# Update these with your Supabase details from your project settings > API and dashboard settings
+PINECONE_API_KEY=
+PINECONE_ENVIRONMENT=
+PINECONE_INDEX_NAME=
