--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,15 @@
     "@pinecone-database/pinecone": "^0.0.14",
     "clsx": "^1.2.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "langchain": "^0.0.66",
     "morgan": "~1.9.1",
     "tailwind-merge": "^1.12.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
