--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "http": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "langchain": "^0.0.66",
