--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jade": "~1.11.0",
     "langchain": "^0.0.66",
     "morgan": "~1.9.1",
+    "pdf-parse": "^1.1.1",
     "tailwind-merge": "^1.12.0"
   },
   "proxy": "http://localhost:5000"
