--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "langchain": "^0.0.66",
+    "mammoth": "^1.5.1",
     "morgan": "~1.9.1",
     "pdf-parse": "^1.1.1",
     "tailwind-merge": "^1.12.0"
