--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "html-to-text": "^9.0.5",
     "http": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -21,6 +22,7 @@
     "mammoth": "^1.5.1",
     "morgan": "~1.9.1",
     "pdf-parse": "^1.1.1",
+    "striptags": "^3.2.0",
     "tailwind-merge": "^1.12.0"
   },
   "proxy": "http://localhost:5000"
