--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "langchain": "^0.0.66",
     "mammoth": "^1.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "pdf-parse": "^1.1.1",
     "striptags": "^3.2.0",
     "tailwind-merge": "^1.12.0"
