--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "pdf-parse": "^1.1.1",
     "striptags": "^3.2.0",
-    "tailwind-merge": "^1.12.0"
+    "tailwind-merge": "^1.12.0",
+    "tesseract.js-core": "^4.0.3"
   },
   "proxy": "http://localhost:5000"
 }
